; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/printing/monitors/localmon/extr_xcv.c__HandleGetTransmissionRetryTimeout.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/printing/monitors/localmon/extr_xcv.c__HandleGetTransmissionRetryTimeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_INVALID_PARAMETER = common dso_local global i32 0, align 4
@ERROR_INSUFFICIENT_BUFFER = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @_HandleGetTransmissionRetryTimeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_HandleGetTransmissionRetryTimeout(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %11, %3
  %15 = load i32, i32* @ERROR_INVALID_PARAMETER, align 4
  store i32 %15, i32* %4, align 4
  br label %29

16:                                               ; preds = %11
  %17 = load i32*, i32** %7, align 8
  store i32 4, i32* %17, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* %19, align 4
  %21 = icmp slt i32 %18, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i32, i32* @ERROR_INSUFFICIENT_BUFFER, align 4
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %16
  %25 = call i32 (...) @GetLPTTransmissionRetryTimeout()
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @CopyMemory(i32 %26, i32* %8, i32 4)
  %28 = load i32, i32* @ERROR_SUCCESS, align 4
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %24, %22, %14
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @GetLPTTransmissionRetryTimeout(...) #1

declare dso_local i32 @CopyMemory(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
